03-security-groups/sg.tf
resource "aws_security_group" "frontend_sg" {
  name        = "FRONTEND-REVOLUTION-SG"
  description = "Allow inbound HTTPS traffic only"
  vpc_id      = local.vpc

  ingress {
    description = "Allow HTTPS inbound traffic"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "backend_sg" {
  name        = "BACKEND-REVOLUTION-SG"
  description = "Allow inbound HTTPS traffic only"
  vpc_id      = local.vpc

  ingress {
    description = "Allow HTTPS inbound traffic"
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    security_groups = [aws_security_group.frontend_sg.id]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "rds_sg" {
  name        = "RDS-REVOLUTION-SG"
  description = "Security Group for RDS"
  vpc_id      = local.vpc

  ingress {
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [aws_security_group.backend_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
